# OperatingSytemsLab

./: CMakeLists.txt
Practical1/: fcfs.c  priority.c  sjfs.c
Practical2/: priorityPreemptive.c  roundRobin.c  srtf.c
Practical3/: criticalSection.c
Practical4/: producerConsumer.c
Practical5/: readerWriter.c
Practical6/: diningPhilosopher.c
Practical9/: fileManip.c
